# InstaWebhooks

./: .gitignore  .pylintrc.toml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: support.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  publish.yml  pylint.yml  release.yml
docs/: requirements.txt
docs/source/: conf.py  getting-started.rst  index.rst  installation.rst  usage.rst
src/: import_firefox_session.py  instagram_to_discord.py  instawebhooks.py  test_instawebhooks.py
src/instawebhooks/: __init__.py  __main__.py  parser.py
